# music-tab-finder

./: .gitignore  README.md  app.js  deploy.bat  index.html  start.bat
backend/: audio_processor.py  main.py  pyproject.toml  tab_engine.py
frontend/: app.js  index.html  styles.css  sw.js
frontend/public/: manifest.json
