[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "librosa>=0.11.0",
    "mido>=1.3.3",
    "numpy>=2.4.2",
    "pretty-midi>=0.2.11",
    "python-multipart>=0.0.22",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.41.0",
    "yt-dlp>=2026.2.21",
]
